--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Personal Site</title>
+    <title>Szymon Personal Site!</title>
   </head>
   <body>
-
+    <h1>Ale fajnie :)</h1>
   </body>
 </html>
