web page extension

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Szymon Personal Site!</title>
-  </head>
-  <body>
-    <h1>Ale fajnie :)</h1>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Szymon Personal Site!</title>
+</head>
+
+<body>
+  <h1>Szymon Wąchała</h1>
+  <p>
+    <em>My <STRONG>first</STRONG> Web Page</em>
+  </p>
+
+  <p>
+    I am working student. Currently my occupation is PLC programmer.
+  </p>
+
+  <hr>
+
+  <h3>Education</h3>
+</body>
+
 </html>
