--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -19,6 +19,20 @@
   <hr>
 
   <h3>Education</h3>
+  <ul>
+    <li>Bachelor in automatisc and robotics (2022)</li>
+    <li>Master in IT automation systems (2023)</li>
+  </ul>
+
+<h3>Hobbies</h3>
+<ol>
+  <li>Programming</li>
+  <li>Data analisys</li>
+  <li>Food</li>
+  <li>A bit of graphic design</li>
+</ol>
+  <hr>
+
 </body>
 
 </html>
