HLINKS and imgs

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <img src="Images/szymon_cropped.png" alt="Szymon profile picture">
   <h1>Szymon Wąchała</h1>
   <p>
     <em>My <STRONG>first</STRONG> Web Page</em>
@@ -20,8 +21,8 @@
 
   <h3>Education</h3>
   <ul>
-    <li>Bachelor in automatisc and robotics (2022)</li>
-    <li>Master in IT automation systems (2023)</li>
+    <li>Bachelor in <a href="https://weny.pwr.edu.pl/kandydaci/studia-i-stopnia/automatyka-przemyslowa">automatisc and robotics</a> (2022)</li>
+    <li>Master in <a href="https://wit.pwr.edu.pl/kandydaci/studia-ii-stopnia/informatyczne-systemy-automatyki">IT automation systems</a> (2023)</li>
   </ul>
 
 <h3>Hobbies</h3>
