--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -22,16 +22,16 @@
   <h3>Education</h3>
   <ul>
     <li>Bachelor in <a href="https://weny.pwr.edu.pl/kandydaci/studia-i-stopnia/automatyka-przemyslowa">automatisc and robotics</a> (2022)</li>
-    <li>Master in <a href="https://wit.pwr.edu.pl/kandydaci/studia-ii-stopnia/informatyczne-systemy-automatyki">IT automation systems</a> (2023)</li>
+    <li>Master in <a href="https://wit.pwr.edu.pl/kandydaci/studia-ii-stopnia/informatyczne-systemy-automatyki"></a> (2023)</li>
   </ul>
 
-<h3>Hobbies</h3>
-<ol>
-  <li>Programming</li>
-  <li>Data analisys</li>
-  <li>Food</li>
-  <li>A bit of graphic design</li>
-</ol>
+  <h3><a href="hobbies.html">Hobbies</a></h3>
+  <ol>
+    <li>Programming</li>
+    <li>Data analisys</li>
+    <li>Food</li>
+    <li>A bit of graphic design</li>
+  </ol>
   <hr>
 
 </body>
