--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -7,15 +7,15 @@
 </head>
 
 <body>
-  <img src="Images/szymon_cropped.png" alt="Szymon profile picture">
-  <h1>Szymon Wąchała</h1>
-  <p>
-    <em>My <STRONG>first</STRONG> Web Page</em>
-  </p>
-
-  <p>
-    I am working student. Currently my occupation is PLC programmer.
-  </p>
+  <table>
+    <tr>
+      <td><img src="Images/szymon_cropped.png" alt="Szymon profile picture"></td>
+      <td><h1>Szymon Wąchała</h1>
+        <p> <em>My <STRONG>first</STRONG> Web Page</em> </p>
+        <p>I am working student. Currently my occupation is PLC programmer.</p>
+      </td>
+    </tr>
+  </table>
 
   <hr>
 
@@ -25,8 +25,77 @@
     <li>Master in <a href="https://wit.pwr.edu.pl/kandydaci/studia-ii-stopnia/informatyczne-systemy-automatyki">IT automation studies</a> (2023)</li>
   </ul>
 
-  <h3><a href="hobbies.html">Hobbies</a></h3>
-  <h3><a href="contact_me.html">Contct me</a></h3>
+  <h3>Work expirience</h3>
+
+  <table>
+
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>2022</td>
+        <td>PLC programmer and software developer in IASE sp z.o.o.</z></td>
+      </tr>
+      <tr>
+        <td>2020 - 2021</td>
+        <td>Electrician</td>
+      </tr>
+    </tbody>
+    
+  </table>
+
+  <h3>Skills</h3>
+
+  <table>
+    <tr>
+      <td>
+        <table>
+          <tr>
+            <td>Python</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>LINUX OS</td>
+            <td>⭐⭐</td>
+          </tr>
+          <tr>
+            <td>SQL</td>
+            <td>⭐</td>
+          </tr>
+          <tr>
+            <td>C/C++</td>
+            <td>⭐</td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <table>
+          <tr>
+            <td>GO</td>
+            <td>⭐</td>
+          </tr>
+          <tr>
+            <td>HTML, CSS, JS</td>
+            <td>⭐</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+
+  
+
+  
+
+  <hr>
+
+  <a href="hobbies.html">Hobbies</a>
+  <a href="contact_me.html">Contct me</a>
   <hr>
 
 </body>
