--- a/HTML - Personal Site/contact_me.html
+++ b/HTML - Personal Site/contact_me.html
@@ -10,5 +10,14 @@
     <p>tel. num. 123 456 789</p>
     <p>wachim13@wp.pl</p>
 
+
+    <form class ="" action="index.html" method="post">
+      <label>Your Name:</label>
+      <input type="text" name="" value="Szymon"> <br>
+      <label>Do you want to have nice day?</label>
+      <input type="checkbox" name="" id="1"> <br>
+      <input type="submit" name="">
+    </form>
+
   </body>
 </html>
