--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <table>
+  <table cellspacing="10">
     <tr>
       <td><img src="Images/szymon_cropped.png" alt="Szymon profile picture"></td>
       <td><h1>Szymon Wąchała</h1>
@@ -24,7 +24,9 @@
     <li>Bachelor in <a href="https://weny.pwr.edu.pl/kandydaci/studia-i-stopnia/automatyka-przemyslowa">automatisc and robotics</a> (2022)</li>
     <li>Master in <a href="https://wit.pwr.edu.pl/kandydaci/studia-ii-stopnia/informatyczne-systemy-automatyki">IT automation studies</a> (2023)</li>
   </ul>
-
+  
+  <hr>
+  
   <h3>Work expirience</h3>
 
   <table>
@@ -49,48 +51,36 @@
     
   </table>
 
+  <hr>
+
   <h3>Skills</h3>
 
-  <table>
+  <table cellspacing="10">
     <tr>
-      <td>
-        <table>
-          <tr>
-            <td>Python</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>LINUX OS</td>
-            <td>⭐⭐</td>
-          </tr>
-          <tr>
-            <td>SQL</td>
-            <td>⭐</td>
-          </tr>
-          <tr>
-            <td>C/C++</td>
-            <td>⭐</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table>
-          <tr>
-            <td>GO</td>
-            <td>⭐</td>
-          </tr>
-          <tr>
-            <td>HTML, CSS, JS</td>
-            <td>⭐</td>
-          </tr>
-        </table>
-      </td>
+      <td>Python</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>LINUX OS</td>
+      <td>⭐⭐</td>
+    </tr>
+    <tr>
+      <td>SQL</td>
+      <td>⭐</td>
+    </tr>
+    <tr>
+      <td>C/C++</td>
+      <td>⭐</td>
+    </tr>
+    <tr>
+      <td>GO</td>
+      <td>⭐</td>
+    </tr>
+    <tr>
+      <td>HTML, CSS, JS</td>
+      <td>⭐</td>
     </tr>
   </table>
-
-  
-
-  
 
   <hr>
 
