better contact form

--- a/HTML - Personal Site/contact_me.html
+++ b/HTML - Personal Site/contact_me.html
@@ -11,12 +11,14 @@
     <p>wachim13@wp.pl</p>
 
 
-    <form class ="" action="index.html" method="post">
+    <form class ="" action="mailto:wachim13@wp.pl" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="" value="Szymon"> <br>
-      <label>Do you want to have nice day?</label>
-      <input type="checkbox" name="" id="1"> <br>
-      <input type="submit" name="">
+      <label>Your email: </label>
+      <input type="email" value="xyz@gmail.com"> <br>
+      <label">Your message</label> <br>
+      <textarea name="name" cols="30" rows="10" ></textarea> <br>
+      <input type="submit" name=""> 
     </form>
 
   </body>
