--- a/HTML - Personal Site/contact_me.html
+++ b/HTML - Personal Site/contact_me.html
@@ -13,11 +13,11 @@
 
     <form class ="" action="mailto:wachim13@wp.pl" method="post" enctype="text/plain">
       <label>Your Name:</label>
-      <input type="text" name="" value="Szymon"> <br>
+      <input type="text" name="yourName" value="Szymon"> <br>
       <label>Your email: </label>
-      <input type="email" value="xyz@gmail.com"> <br>
+      <input type="email" name="yourEmail" value="xyz@gmail.com"> <br>
       <label">Your message</label> <br>
-      <textarea name="name" cols="30" rows="10" ></textarea> <br>
+      <textarea name="yourMessage" cols="30" rows="10" ></textarea> <br>
       <input type="submit" name=""> 
     </form>
 
