--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -4,6 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Szymon Personal Site!</title>
+
+  <style>
+
+    body {
+      background-color: F9F7F7;
+    }
+
+  </style>
 </head>
 
 <body>
