--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -4,14 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Szymon Personal Site!</title>
+  <link rel="stylesheet" href="CSS/styles.css">
 
-  <style>
-
-    body {
-      background-color: F9F7F7;
-    }
-
-  </style>
 </head>
 
 <body>
