--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -21,7 +21,7 @@
 
   <hr>
 
-  <h3 id="edu">Education</h3>
+  <h3>Education</h3>
   <ul>
     <li>Bachelor in <a href="https://weny.pwr.edu.pl/kandydaci/studia-i-stopnia/automatyka-przemyslowa">automatisc and robotics</a> (2022)</li>
     <li>Master in <a href="https://wit.pwr.edu.pl/kandydaci/studia-ii-stopnia/informatyczne-systemy-automatyki">IT automation studies</a> (in progress)</li>
@@ -29,7 +29,7 @@
   
   <hr>
   
-  <h3 class="exp">Work expirience</h3>
+  <h3>Work expirience</h3>
 
   <table>
 
