--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -5,14 +5,20 @@
     <title>My Site</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:ital,wght@1,300&family=Sacramento&display=swap" rel="stylesheet">
+
 <body>
 
     <div class="top_container">
-        <img src="images/cloud.png" alt="cloud">
+        <img class="top_cloud" src="images/cloud.png" alt="cloud">
         <h1>I'm Szymon.</h1>
         <p>a programmer?</p>
-        <img src="images/cloud.png" alt="cloud">
-        <img src="images/hill.png" alt="moutain">
+        <img class="bottom_cloud" src="images/cloud.png" alt="cloud">
+        <img class="hill" src="images/hill.png" alt="moutain">
     </div>
 
     <div class="mid_container">
@@ -22,9 +28,6 @@
     <div class="down_container">
 
     </div>
-    
-
-
 
 </body>
 </html>
