--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <div class="top_container">
+    <div class="top-container">
         <img class="top_cloud" src="images/cloud.png" alt="cloud">
         <h1>I'm Szymon.</h1>
         <h3>a programmer?</h3>
@@ -21,11 +21,11 @@
         <img class="hill" src="images/hill.png" alt="moutain">
     </div>
 
-    <div class="mid_container">
+    <div class="mid-container">
         <div class="profile">
             <img class="my-img" src="images/szymon.jpg" alt="szymons-photo">
             <h2>Hello.</h2>
-            <p>I am 23 years old. I am currently studying at Wrocław University of Science and Technology <br>
+            <p class="intro">I am 23 years old. I am currently studying at Wrocław University of Science and Technology
                at the faculty of IT Automation Studies. 
                I like to do programming and love eating burgers with my girlfriend.</p>
         </div>
@@ -33,35 +33,35 @@
           <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-              <img class="skills-img" src="images/python.png" alt="python-image">
+              <img class="python-img" src="images/python.png" alt="python-image">
               <h3>Python programming</h3>
-              <p>I started my journey with python at the beginning of my current studies. <br>
+              <p>I started my journey with python at the beginning of my current studies.
                  I am interested in data analysis, AI and scripting for simplifying everyday tasks.</p>
             </div>
             <div class="skill-row">
-              <img class="skills-img" src="images/blender.png" alt="blender-software-image">
+              <img class="blender-img" src="images/blender.png" alt="blender-software-image">
               <h3>3D modelling</h3>
-              <p>My journey with 3D graphics started when i was in junior high school. <br>
+              <p>My journey with 3D graphics started when i was in junior high school.
                  Since then i was developing skills in this field. Software in which i used to work is Blender and Substance Painter.</p>
             </div>
             <div class="skill-row">
-                <img class="skills-img" src="images/plc.png" alt="blender-software-image">
-                <h3>Automation and power controll</h3>
-                <p>I graduated Automation and Robotics at Wrocław University of Science and Technology. <br>
-                   I like to design the way that many process affect each other and controll them at the same time. <br>
+                <img class="plc-img" src="images/plc.png" alt="blender-software-image">
+                <h3>Automation and Robotics</h3>
+                <p>I graduated Automation and Robotics at Wrocław University of Science and Technology.
+                   I like to design the way that many process affect each other and controll them at the same time.
                    I am working as a PLC programmer at IASE (Institute of Power Systems Automation).</p>
               </div>
           </div>
           <hr>
           <div class="contact-me">
             <h2>Get In Touch</h2>
-            <h3>And start creating new chapter.</h3>
+            <h3>And start creating New Chapter.</h3>
             <p>I am open to new possibilities. I like New challenges.</p>
             <a class="btn" href="mailto:wachim17@gmail.com">CONTACT ME</a>
           </div>
     </div>
 
-    <div class="down_container">
+    <div class="down-container">
         <a class="footer-link" href="https://linkedin.com/in/szymon-wąchała-b0a94b164">LinkedIn</a>
         <a class="footer-link" href="https://github.com/Szymon423">GitHub</a>
         <p>© Szymon Wąchała.</p>
