seems allmost done

--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -56,7 +56,7 @@
           <div class="contact-me">
             <h2>Get In Touch</h2>
             <h3>And start creating New Chapter.</h3>
-            <p>I am open to new possibilities. I like New challenges.</p>
+            <p class="contact-msg">I am open to new possibilities. I like New challenges.</p>
             <a class="btn" href="mailto:wachim17@gmail.com">CONTACT ME</a>
           </div>
     </div>
@@ -64,7 +64,7 @@
     <div class="down-container">
         <a class="footer-link" href="https://linkedin.com/in/szymon-wąchała-b0a94b164">LinkedIn</a>
         <a class="footer-link" href="https://github.com/Szymon423">GitHub</a>
-        <p>© Szymon Wąchała.</p>
+        <p class="copyright">© 2022 Szymon Wąchała.</p>
     </div>
 
 </body>
