--- a/4. STARTUP site/index.html
+++ b/4. STARTUP site/index.html
@@ -8,54 +8,76 @@
         rel="stylesheet" 
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
         crossorigin="anonymous">
+
+  <!-- Plik stylesheet -->
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- Wczytanie fontów z googlefonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Ubuntu&display=swap" rel="stylesheet"> 
+
+  <!-- bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
           integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
           crossorigin="anonymous"></script>
+
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/52cb0c7a80.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 
   <section id="title">
-    <!--navbar-->
-    <nav class="navbar navbar-expand-lg">
-        
-      <a class="navbar-brand" href="">
-        <img src="images/IASE.png" alt="iase-logo" width="150px"> 
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                  <a class="nav-link" href="">Contact</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="">Stawki</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="">Download</a>
-              </li>
-          </ul>        
-      </div>
-    </nav>
-    <!--navbar-->
+    <div class="container-fluid">
 
-    <div class="row">
+      <!--navbar-->
+      <nav class="navbar navbar-expand-lg">
+        <!-- Logo IASE na pasku nawigacyjnym    -->
+        <a class="navbar-brand" href="">
+          <img src="images/IASE.png" alt="iase-logo" width="150px"> 
+        </a>
 
-      <div class="col-lg-6">
-        <h1>Instytut Automatyki Systemów Energetycznych</h1>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
-      </div>
+        <!-- Przycisk do rozwijania menu kontekstowego kiedy nie ma miejsca na osobne linki -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="col-lg-6">
-        <img src="images/master.png" alt="iphone-mockup">
+        <!-- Lista zagnieżdżona w navbarze -->
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Stawki</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Download</a>
+                </li>
+            </ul>        
+        </div>
+      </nav>
+      <!--navbar-->
+
+      <div class="row tabele">
+
+        <div class="col-lg-6">
+          <h1>Instytut Automatyki Systemów Energetycznych</h1>
+          <button type="button" class="btn btn-primary btn-lg">
+            <i class="fa-solid fa-tag"></i> Nasza oferta
+          </button>
+
+          <button type="button" class="btn btn-outline-primary btn-lg">
+            <i class="fa-solid fa-bag-shopping"></i> Wyślij zapytanie
+          </button>
+        </div>
+
+        <div class="col-lg-6">
+          <img src="images/master.png" alt="iphone-mockup">
+        </div>
+
       </div>
 
     </div>
