--- a/4. STARTUP site/index.html
+++ b/4. STARTUP site/index.html
@@ -23,7 +23,7 @@
           crossorigin="anonymous"></script>
 
   <!-- fontawesome -->
-  <script src="https://kit.fontawesome.com/52cb0c7a80.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/03b4b69b40.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -99,26 +99,22 @@
 
   <section id="features">
     <div class="row">
-      <div class="col-lg-4">
-        <p>
-          <i class="fa-thin fa-buildings"></i> dupa
-        </p>
-        <h3>Kim jesteśmy?.</h3>
-        <p>Zespołem młodych oraz ambitnych automatyków</p>
-      </div>
-  
-      <div class="col-lg-4">
-        <p>
-          <i class="fa-thin fa-people-group"></i> dupa
-        </p>
+      <div class="col-lg-4 feature-box">
+        <i class="fa-solid fa-people-group icon-features fa-4x"></i>
         <h3>Wykwalifikowana kadra</h3>
         <p>Studenci i Mariusz Lipińki XDD</p>
       </div>
+
+      <div class="col-lg-4  feature-box">
+        <i class="fa-solid fa-building icon-features fa-4x"></i>
+        <h3>Gdzie jesteśmy?</h3>
+        <p>Nasz budynek należy do kompleksu budynków Hali stulecia we Wrocławiu</p>
+      </div>
   
-      <div class="col-lg-4">
-        <i class="fa-thin fa-face-disappointed"></i> dupa
-      <h3>Weź se odpuść to IsrASE</h3>
-      <p>Serio Ci mówię, kupa gówna i mchu.</p>
+      <div class="col-lg-4 feature-box">
+        <i class="fa-solid fa-face-frown icon-features fa-4x"></i>
+        <h3>Weź se odpuść to IsrASE</h3>
+        <p>Serio Ci mówię, kupa gówna i mchu.</p>
       </div>
   
     </div>
@@ -130,12 +126,12 @@
   <section id="testimonials">
 
     <h2>Nasz przeciętny pracownik przychodzacy do pracy.</h2>
-    <img src="images/happy-male.jpg" alt="IASE-worker-profile">
+    <img class="mariuszXD" src="images/happy-male.jpg" alt="IASE-worker-profile">
     <em>Mariusz Lipiński</em>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+    <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
     <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+    <em>Beverly, Illinois</em>
 
   </section>
 
