--- a/4. STARTUP site/index.html
+++ b/4. STARTUP site/index.html
@@ -122,11 +122,37 @@
 
 
   <!-- Testimonials -->
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="..." alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="..." alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="..." alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
   <section id="testimonials">
 
     <h2>Nasz przeciętny pracownik przychodzacy do pracy.</h2>
-    <img class="mariuszXD" src="images/happy-male.jpg" alt="IASE-worker-profile">
+    <img class="stary" src="images/happy-male.jpg" alt="IASE-worker-profile">
     <em>Mariusz Lipiński</em>
 
     <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -139,8 +165,8 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/pwr.png" alt="tc-logo">
-    <img src="images/pse.png" alt="tnw-logo">
+    <img class="sponsor1" src="images/pwr.png" alt="tc-logo">
+    <img class="sponsor2" src="images/pse.png" alt="tnw-logo">
   </section>
 
 
