--- a/4. STARTUP site/index.html
+++ b/4. STARTUP site/index.html
@@ -122,42 +122,50 @@
 
 
   <!-- Testimonials -->
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="..." alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="..." alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="..." alt="Third slide">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-
+  
   <section id="testimonials">
 
-    <h2>Nasz przeciętny pracownik przychodzacy do pracy.</h2>
-    <img class="stary" src="images/happy-male.jpg" alt="IASE-worker-profile">
-    <em>Mariusz Lipiński</em>
+    <div id="TestimonialsCarousel" class="carousel carousel-dark slide" data-ride="false">
+      <div class="carousel-inner">
+  
+        <div class="carousel-item active">
+          <h2>Nasz przeciętny pracownik przychodzacy do pracy</h2>
+          <img class="stary" src="images/happy-male.jpg" alt="IASE-worker-profile">
+        </div>
+  
+        <div class="carousel-item">
+          <h2>Twój stary po tym jak dostaniesz wypłatę</h2>
+          <img class="stary" src="images/stary1.jpg" alt="Second slide">
+        </div>
+        
+        <div class="carousel-item">
+          <h2>Twój stary po tym jak dostaniesz wypłatę v2</h2>
+          <img class="stary" src="images/stary2.jpg" alt="Third slide">
+        </div>
 
-    <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em>
+        <div class="carousel-item">
+          <h2>Twój stary po tym jak dostaniesz wypłatę v3</h2>
+          <img class="stary" src="images/stary3.jpg" alt="Third slide">
+        </div>
+        
+        <div class="carousel-item">
+          <h2>No zgadnij kto to XD</h2>
+          <img class="stary" src="images/stary4.jpg" alt="Third slide">
+        </div>
+
+      </div>
+
+      <button class="carousel-control-prev" type="button" data-bs-target="#TestimonialsCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon next-prev" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+
+      <button class="carousel-control-next" type="button" data-bs-target="#TestimonialsCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon next-prev" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+
+    </div>
 
   </section>
 
