--- a/4. STARTUP site/index.html
+++ b/4. STARTUP site/index.html
@@ -186,50 +186,54 @@
 
   <section id="pricing">
 
-    <div class="card">
-      <div class="card-header">
-        <h3>Student</h3>
+    <div class="card-deck">
+
+      <div class="card">
+        <div class="card-header">
+          <h3>Student</h3>
+        </div>
+
+        <div class="card-body">
+          <h2>Umowa zlecenie</h2>
+          <p>30zł/h brutto</p>
+          <p>30zł/h netto</p>
+          <p>niepłatne delegacje</p>
+          <button type="button">złóż CV</button>
+
+        </div>
       </div>
 
-      <div class="card-body">
-        <h2>Umowa zlecenie</h2>
-        <p>30zł/h brutto</p>
-        <p>30zł/h netto</p>
-        <p>niepłatne delegacje</p>
-        <button type="button">złóż CV</button>
+      <div class="card">
+        <div class="card-header">
+          <h3>Przeciętny pracownik</h3>
+        </div>
 
-      </div>
-    </div>
+        <div class="card-body">
+          <h2>Umowa o pracę</h2>
+          <p>30zł/h brutto</p>
+          <p>22zł/h netto</p>
+          <p>płatne delegacje</p>
+          <button type="button">złóż CV</button>
 
-    <div class="card">
-      <div class="card-header">
-        <h3>Przeciętny pracownik</h3>
-      </div>
-
-      <div class="card-body">
-        <h2>Umowa o pracę</h2>
-        <p>30zł/h brutto</p>
-        <p>22zł/h netto</p>
-        <p>płatne delegacje</p>
-        <button type="button">złóż CV</button>
-
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-header">
-        <h3>I tak tyle nie dostaniesz</h3>
+        </div>
       </div>
 
-      <div class="card-body">
-        <h2>B2B</h2>
-        <p>100zł/h brutto</p>
-        <p>82zł/h netto</p>
-        <p>praca zdalna</p>
-        <button type="button">złóż CV</button>
+      <div class="card">
+        <div class="card-header">
+          <h3>I tak tyle nie dostaniesz</h3>
+        </div>
 
+        <div class="card-body">
+          <h2>B2B</h2>
+          <p>100zł/h brutto</p>
+          <p>82zł/h netto</p>
+          <p>praca zdalna</p>
+          <button type="button">złóż CV</button>
+
+        </div>
       </div>
-    </div>
+      
+  </div>
 
 
     <h2>Systemy automatyki dostrojone do Twoich potrzeb.</h2>
