--- a/4. STARTUP site/index.html
+++ b/4. STARTUP site/index.html
@@ -174,19 +174,12 @@
   </section>
 
 
-  <!-- Press -->
-
-  <section id="press">
-    <img class="sponsor1" src="images/pwr.png" alt="tc-logo">
-    <img class="sponsor2" src="images/pse.png" alt="tnw-logo">
-  </section>
-
-
+ 
   <!-- Pricing -->
 
   <section id="pricing">
 
-    <div class="row">
+    <div class="row umowy-row">
       <div class="col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header clas-header-color">
@@ -273,6 +266,15 @@
   <!-- Footer -->
 
   <footer id="footer">
+
+     <!-- Press -->
+
+  <section id="press">
+    <img class="sponsor1" src="images/pwr.png" alt="tc-logo">
+    <img class="sponsor2" src="images/pse.png" alt="tnw-logo">
+  </section>
+
+
 
     <p>© Copyright IASE</p>
 
