--- a/4. STARTUP site/index.html
+++ b/4. STARTUP site/index.html
@@ -30,7 +30,7 @@
 <body>
 
   <section id="title">
-    <div class="container-fluid">
+    <div class="container-fluid left-right-padding">
 
       <!--navbar-->
       <nav class="navbar navbar-expand-lg">
@@ -97,7 +97,7 @@
   
   <!-- Features -->
 
-  <section id="features">
+  <section id="features" class="left-right-padding">
     <div class="row">
       <div class="col-lg-4 feature-box">
         <i class="fa-solid fa-people-group icon-features fa-4x"></i>
@@ -127,7 +127,7 @@
 
   <!-- Testimonials -->
   
-  <section id="testimonials">
+  <section id="testimonials" class="left-right-padding">
 
     <div id="TestimonialsCarousel" class="carousel carousel-dark slide" data-ride="false">
       <div class="carousel-inner">
@@ -179,7 +179,7 @@
 
   <section id="pricing">
 
-    <div class="row umowy-row">
+    <div class="row left-right-padding">
       <div class="col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header clas-header-color">
