--- a/4. STARTUP site/index.html
+++ b/4. STARTUP site/index.html
@@ -107,7 +107,7 @@
 
       <div class="col-lg-4  feature-box">
         <a href="https://goo.gl/maps/1yjJmTcfaswaLfm86">
-          <i class="fa-solid fa-building icon-features fa-4x"></i>
+          <i class="fa-solid fa-location-dot icon-features fa-4x"></i>
         </a>
         <h3>Gdzie jesteśmy?</h3>
         <p>Nasz budynek należy do kompleksu budynków Hali stulecia we Wrocławiu</p>
