--- a/4. STARTUP site/index.html
+++ b/4. STARTUP site/index.html
@@ -248,9 +248,14 @@
     <h2 class="footer-text">Systemy automatyki dostrojone do Twoich potrzeb.</h2>
     <p class="footer-text">Oferujemy szeroką gamę urządzeń sterujących automatyki przemysłowej jaki i systemy DCS.</p>
 
+    <a href="https://www.facebook.com/profile.php?id=100004500152575">
+      <i class="fa-brands fa-facebook fa-2x footer-link"></i>
+    </a>
+
     <a href="https://linkedin.com/in/szymon-wąchała-b0a94b164">
       <i class="fa-brands fa-linkedin fa-2x footer-link"></i>
     </a>
+    
 
     <a href="https://github.com/Szymon423">
       <i class="fa-brands fa-github fa-2x footer-link"></i>
