--- a/6. DOM/index.html
+++ b/6. DOM/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello!</h1>
     
+
+
+    <script src="index.js"></script>
 </body>
 </html>
