--- a/8. Drums/index.html
+++ b/8. Drums/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en pl" dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
     </a>
   </footer>
 
-  
+
   <script src="https://kit.fontawesome.com/03b4b69b40.js" crossorigin="anonymous"></script>
   <script src="index.js"></script>
 </body>
