--- a/9. jQuerry/index.html
+++ b/9. jQuerry/index.html
@@ -16,6 +16,7 @@
     <button>click me 3</button>
     <button>click me 4</button>
     <button>click me 5</button>
+    <input type="text">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="index.js"></script>
